# TokenMan

./: .env.sample  .gitignore  LICENSE  README.md  main.py  pyproject.toml  tokenman.py
data/wordlists/: easy.txt  hard.txt  medium.txt
src/core/: engine.py  state.py  wordlist.py
src/services/: coach.py  hints.py  llm_picker.py  review.py
